[package]
name = "netcfg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hickory-resolver = { version = "0.26.1", features = ["https-ring", "webpki-roots"] }
log = "0.4"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
sysproxy = "0.3.0"
tokio = { version = "1", features = ["rt", "net"] }
url = "2.5.8"
